# tam_object_detection

./: .gitignore  .gitmodules  README.md
tam_object_detection/: CMakeLists.txt  package.xml
tam_object_detection/io/config/: sopl_japanopen_2024.txt  wrc_ycb_class_names.txt
tam_object_detection/launch/: hsr_head_rgbd_lang_sam_service.launch  hsr_head_rgbd_yolov8_trt.launch  hsr_head_rgbd_yolov8_trt_service.launch  oak_yolov8_trt.launch  oak_yolov8_trt_service.launch  rs_rgbd_yolov8_trt.launch  rs_yolov8_trt_service.launch  sigverse_head_lang_sam_service.launch  sigverse_head_rgbd_yolov8_trt_service.launch
tam_object_detection/launch/include/: lang_sam.launch  yolov8_trt.launch  yolov8_trt_service.launch
tam_object_detection/msg/: BBox.msg  ObjectDetection.msg  Pose3D.msg
tam_object_detection/script/: lang_sam_detection_service.py  yolo_world_service.py  yolov8_trt_node.py  yolov8_trt_service.py
tam_object_detection/srv/: LangSamObjectDetectionService.srv  ObjectDetectionService.srv
